--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
   },
   "rules": {
     "no-console": 0,
-    "operator-linebreak": 0
+    "operator-linebreak": 0,
+    "no-param-reassign": 0,
+    "no-underscore-dangle": 0,
+    "object-curly-newline": 0
   }
 }
