--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
     "operator-linebreak": 0,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "no-confusing-arrow": 0,
+    "implicit-arrow-linebreak": 0,
+    "function-paren-newline": 0
   }
 }
