--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "object-curly-newline": 0,
     "no-confusing-arrow": 0,
     "implicit-arrow-linebreak": 0,
-    "function-paren-newline": 0
+    "function-paren-newline": 0,
+    "import/no-extraneous-dependencies": 0
   }
 }
